P1 Task 2 Changed FILE_REFERENCES implementation in MoveTool.java